<resources>
    <string name="app_name">Hero Finder: Marvel Edition</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Continue</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_login">Login</string>
    <string name="action_create_user">Sign Up</string>
    <string name="msg_create_new_user">Don\'t you have an account?</string>
    <string name="msg_sign_in">Already have an account?</string>
    <string name="email_input">E-mail</string>
    <string name="mandatory_field">*Required</string>
    <string name="password_input">Password</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="action_back">BACK</string>
    <string name="marvel_logo_app">Marvel Logo App</string>
    <string name="search_button_text">SEARCH</string>
    <string name="search_edit_text_hint">Search...</string>
    <string name="text_view_hero_finder">Type the name of your favourite superhero</string>
    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</string>
    <string name="superhero_image">Superhero Image</string>
    <string name="btn_comics">See Comics</string>
    <string name="btn_events">See Events</string>
    <string name="btn_back">Back</string>
</resources>